--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GENERATE_SOURCEMAP=false
+REACT_APP_MORALIS_APPLICATION_ID=j2HHIGEH0KLbrJGbYIQqA2wAtbOI2UjY2rFv598C
+REACT_APP_MORALIS_SERVER_URL=https://g6i5o835unpw.usemoralis.com:2053/server
