--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "@nivo/core": "^0.75.0",
+    "@nivo/radar": "^0.75.0",
+    "@react-three/drei": "^8.3.1",
+    "@react-three/fiber": "^7.0.24",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -11,13 +19,19 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@walletconnect/web3-provider": "^1.7.0",
+    "autoprefixer": "^10.4.0",
+    "history": "^5.2.0",
     "moralis": "^0.0.176",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
+    "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.3.8",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "three": "^0.135.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
