--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@nivo/radar": "^0.75.0",
     "@react-three/drei": "^8.3.1",
     "@react-three/fiber": "^7.0.24",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +19,7 @@
     "@types/node": "^16.11.14",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
     "@walletconnect/web3-provider": "^1.7.0",
     "autoprefixer": "^10.4.0",
     "history": "^5.2.0",
@@ -29,6 +31,7 @@
     "react-colorful": "^5.5.1",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.3.8",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "three": "^0.135.0",
