--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.5",
     "@nivo/core": "^0.75.0",
     "@nivo/radar": "^0.75.0",
     "@react-three/drei": "^8.3.1",
-    "@react-three/fiber": "^7.0.24",
+    "@react-three/fiber": "7.0.21",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -20,6 +20,7 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
+    "@types/three": "^0.135.0",
     "@walletconnect/web3-provider": "^1.7.0",
     "autoprefixer": "^10.4.0",
     "history": "^5.2.0",
