--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@walletconnect/web3-provider": "^1.7.0",
     "autoprefixer": "^10.4.0",
     "history": "^5.2.0",
+    "js-base64": "^3.7.2",
     "moralis": "^0.0.176",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "postcss": "^8.4.5",
